--- a/football_news/.env.prod
+++ b/football_news/.env.prod
@@ -1,7 +1,7 @@
-DB_NAME : antonius.daniel
-DB_USER  : antonius.daniel
-DB_PASSWORD : S0OYH390
-DB_HOST : 152.118.29.139
-DB_PORT  : 5432
+DB_NAME = antonius.daniel
+DB_USER  = antonius.daniel
+DB_PASSWORD = S0OYH390
+DB_HOST = 152.118.29.139
+DB_PORT  = 5432
 SCHEMA=tutorial
 PRODUCTION=True
